--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ li {
 }
 
 .list-enter-active, .list-leave-active {
-  transition: all 0.2s;
+  transition: all 0.3s;
 }
 .list-enter, .list-leave-to {
   opacity: 0;
@@ -158,7 +158,7 @@ button {
   background: #aaa;
   color: #fff;
   border: none;
-  transition: all 0.2s;
+  transition: all 0.3s;
 }
 
 .close {
@@ -167,21 +167,39 @@ button {
   height: 20px;
   font-size: 26px;
   background: #fff;
-  color: rgba(0, 0, 0, .3);
   line-height: 18px;
   top: 15px;
   right: 10px;
   border-radius: 50%;
   transform: rotate(45deg);
   opacity: 0.7;
-  transition: all 0.2s;
+  transition: all 0.3s;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.1);
 }
 
+.close::before, .close::after {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 12px;
+  background: rgba(0, 0, 0, .3);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.close::after {
+  width: 12px;
+  height: 2px;
+}
+
 .close.gray {
   background:rgba(0, 0, 0, 0.5);
-  color: #fff;
+}
+
+.close.gray::before, .close.gray::after {
+  background: #fff;
 }
 
 .close:hover {
@@ -377,7 +395,7 @@ button.error:hover {
   right: 10px;
   border-radius: 50%;
   box-sizing: border-box;
-  transition: all 0.2s;
+  transition: all 0.3s;
 }
 
 .puber-list .puber-wraper .puber .choice-bg .choice.selected-add {
