--- a/style.css
+++ b/style.css
@@ -68,62 +68,81 @@ li {
   transform: translateY(-30px);
 }
 
+.shake {
+  animation: shake 0.5s ease-out 0s infinite;
+}
+@keyframes shake {
+  0% {
+    transform: scale(1);
+  }
+
+  10% {
+    transform: scale(0.8);
+  }
+
+  20% {
+    transform: scale(1.2);
+  }
+
+  30% {
+    transform: scale(0.8);
+  }
+
+  40% {
+    transform: scale(1.2);
+  }
+
+  50% {
+    transform: scale(0.8);
+  }
+
+  60% {
+    transform: scale(1.2);
+  }
+
+  70% {
+    transform: scale(0.8);
+  }
+
+  80% {
+    transform: scale(1);
+  }
+
+  90% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
 .blink {
   animation: blink 0.5s ease-out 0s infinite;
 }
 @keyframes blink {
   0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-
-  10% {
-    transform: scale(0.8);
-    opacity: 0.8;
+    opacity: 0;
   }
 
   20% {
-    transform: scale(1.2);
     opacity: 1;
-  }
-
-  30% {
-    transform: scale(0.8);
-    opacity: 0.8;
   }
 
   40% {
-    transform: scale(1.2);
-    opacity: 1;
-  }
-
-  50% {
-    transform: scale(0.8);
-    opacity: 0.8;
+    opacity: 0;
   }
 
   60% {
-    transform: scale(1.2);
     opacity: 1;
-  }
-
-  70% {
-    transform: scale(0.8);
-    opacity: 0.8;
   }
 
   80% {
-    transform: scale(1);
-    opacity: 1;
+    opacity: 0;
   }
 
-  90% {
-    transform: scale(1.2);
-    opacity: 0.8;
-  }
 
   100% {
-    transform: scale(1);
     opacity: 1;
   }
 }
