--- a/popop/index.css
+++ b/popop/index.css
@@ -198,7 +198,7 @@
 ._pop-button {
     width: 100%;
     height: 44px;
-    margin-top: 1px;
+    border-top: 1px solid rgba(0, 0, 0, .1);
     border-radius:0 0 10px 10px;
     -webkit-border-radius:0 0 10px 10px;
     overflow: hidden;
