--- a/popop/index.css
+++ b/popop/index.css
@@ -108,7 +108,7 @@
     z-index: 1000000;
     background: rgba(0, 0, 25, .3);
 }
-._toastBox.hide,._popBox.hide,._loadingBox.hide{
+._toastBox._hide,._popBox._hide,._loadingBox._hide{
     opacity: 0;
     transition:all 0.3s;
     -webkit-transition:all 0.3s;
@@ -211,13 +211,15 @@
     text-align: center;
     background: rgba(255,255,255,0.9);
     color: #575757;
-    font-size: 18px;
+    font-size: 16px;
     float: left;
     cursor:pointer;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     user-select: none;
+    color: #ce0404;
 }
 ._pop-button ._btn._confirm {
-    margin:0 -1px 0 1px;
+    margin: 0 -1px 0 1px;
+    color: #04ce38;
 }
