--- a/popop/index.css
+++ b/popop/index.css
@@ -1,88 +1,3 @@
-._loadingBox{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000001;
-    background: rgba(0, 0, 0, .3);
-    animation: fadeIn 0.3s;
-    -webkit-animation: fadeIn 0.3s;
-}
-._loading{
-    width: 110px;
-    height: 110px;
-    position: absolute;
-    top: 30%;
-    right:0;
-    left: 0;
-    margin:auto;
-    border-radius: 10px;
-    background: rgba(50,50,50,.5);
-    color:#ddd;
-    text-align: center;
-    font-size: 14px;
-}
-._load{
-  margin: 20px auto 15px;
-  border-radius: 50%;
-  width: 36px;
-  height: 36px;
-  border-top: 4px solid rgba(255, 255, 255, 0.2);
-  border-right: 4px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 4px solid rgba(255, 255, 255, 0.2);
-  border-left: 4px solid rgba(255, 255, 255, 0.8);
-  -webkit-animation: _load 1.1s infinite linear;
-  animation: _load 1.1s infinite linear;
-}
-
-._blur {
-    filter: blur(5px);
-}
-
-@-webkit-keyframes _load {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes _load {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-._toastBox {
-    width: 100%;
-    position: fixed;
-    bottom: 50px;
-    left: 0;
-    z-index: 999999;
-    font-size: 14px;
-    color:#fff;
-    text-align: center;
-    background: rgba(0,0,0,.0);
-}
-._toast {
-    display: inline-block;
-    min-height: 16px;
-    padding: 12px 15px; 
-    min-width: 100px;
-    max-width: 50%;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    background: rgba(0, 0, 0, .75);
-    animation: _fadeIn 0.3s;
-    -webkit-animation: _fadeIn 0.3s;
-}
 @keyframes _fadeIn {
     0% {
         opacity: (0);
@@ -99,6 +14,114 @@
         opacity: (1);
     }
 }
+
+@-webkit-keyframes _load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes _load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes _pop {
+    0% {
+        transform: scale(0.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+@-webkit-keyframes _pop {
+    0% {
+        -webkit-transform: scale(0.5);
+    }
+    100% {
+        -webkit-transform: scale(1);
+    }
+}
+
+._blur {
+    filter: blur(5px);
+}
+
+._loadingBox{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000001;
+    background: rgba(0, 0, 0, .3);
+    animation: fadeIn 0.3s;
+    -webkit-animation: fadeIn 0.3s;
+    transition:all 0.3s;
+    -webkit-transition:all 0.3s;
+}
+._loading{
+    width: 110px;
+    height: 110px;
+    position: absolute;
+    top: 30%;
+    right:0;
+    left: 0;
+    margin:auto;
+    border-radius: 10px;
+    background: rgba(50,50,50,.5);
+    color:#ddd;
+    text-align: center;
+    font-size: 14px;
+}
+._load{
+    margin: 20px auto 15px;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    border-top: 4px solid rgba(255, 255, 255, 0.2);
+    border-right: 4px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+    border-left: 4px solid rgba(255, 255, 255, 0.8);
+    -webkit-animation: _load 1.1s infinite linear;
+    animation: _load 1.1s infinite linear;
+}
+
+._toastBox {
+    width: 100%;
+    position: fixed;
+    bottom: 50px;
+    left: 0;
+    z-index: 999999;
+    font-size: 14px;
+    color:#fff;
+    text-align: center;
+    background: rgba(0,0,0,.0);
+    opacity: 0;
+    transition:all 0.3s;
+    -webkit-transition:all 0.3s;
+}
+._toast {
+    display: inline-block;
+    min-height: 16px;
+    padding: 12px 15px; 
+    min-width: 100px;
+    max-width: 50%;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    background: rgba(0, 0, 0, .75);
+}
+
 ._popBox {
     width: 100%;
     height: 100%;
@@ -107,11 +130,14 @@
     left: 0;
     z-index: 1000000;
     background: rgba(0, 0, 25, .3);
+    transition:all 0.3s;
+    -webkit-transition:all 0.3s;
 }
 ._toastBox._hide,._popBox._hide,._loadingBox._hide{
     opacity: 0;
-    transition:all 0.3s;
-    -webkit-transition:all 0.3s;
+}
+._toastBox._show {
+    opacity: 1;
 }
 ._pop {
     width: 75%;
@@ -128,22 +154,6 @@
     -webkit-animation: _pop 0.3s;
     transform:translateZ(0);
     -webkit-transform:translateZ(0);
-}
-@keyframes _pop {
-    0% {
-        transform: scale(0.5);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
-@-webkit-keyframes _pop {
-    0% {
-        -webkit-transform: scale(0.5);
-    }
-    100% {
-        -webkit-transform: scale(1);
-    }
 }
 ._pop-top {
     width: 100%;
